--- a/index.html
+++ b/index.html
@@ -10,18 +10,19 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>contactsHub</title>
     <script>
-      if (
-        localStorage.theme === 'dark' ||
-        (!('theme' in localStorage) &&
-          window.matchMedia('(prefers-color-scheme:dark').matches)
-      ) {
-        document.documentElement.classList.add('dark')
-      } else {
-        document.documentElement.classList.remove('dark')
-      }
+      // On page load or when changing themes, best to add inline in `head` to avoid FOUC
+      // if (
+      //   localStorage.getItem('theme') === 'dark' ||
+      //   (!('theme' in localStorage) &&
+      //     window.matchMedia('(prefers-color-scheme: dark)').matches)
+      // ) {
+      //   document.documentElement.classList.add('dark')
+      // } else {
+      //   document.documentElement.classList.remove('dark')
+      // }
     </script>
+    <title>contactsHub</title>
   </head>
   <body>
     <div id="root"></div>
